style(basic-3.7): add semicolon after each property

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .add-item {
   display: flex;
@@ -124,7 +124,7 @@
   width: 226px;
 }
 .task-input {
-  width: 226px
+  width: 226px;
 }
 .delete-pic {
   height: 2em;
@@ -137,18 +137,18 @@
 
 /* Completed */
 .completed-tasks .element-content {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .task-input {
-  display: none
+  display: none;
 }
 
 .edit-mode .task-input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode .element-content {
